@@ -8,14 +8,13 @@
  */
 
 #include "includes.h"
-RCSID("$OpenBSD: ssh-keyscan.c,v 1.1 2000/12/04 19:24:02 markus Exp $");
+RCSID("$OpenBSD: ssh-keyscan.c,v 1.2 2000/12/06 19:57:48 markus Exp $");
 
 #ifdef HAVE_SYS_QUEUE_H
 #include <sys/queue.h>
 #else
 #include "bsd-queue.h"
 #endif
-#include <err.h>
 #include <errno.h>
 
 #include <openssl/bn.h>
@@ -528,7 +527,7 @@ nexthost(int argc, char **argv)
 					fname = argv[argno++];
 				if (!strcmp(fname, "-"))
 					fname = NULL;
-				lb = Linebuf_alloc(fname, warn);
+				lb = Linebuf_alloc(fname, error);
 			} else
 				error("ignoring invalid/misplaced option `%s'", argv[argno++]);
 		} else {
